<?xml version="1.0"?>
<package format="2">
  <name>tesseract_rosutils</name>
  <version>0.1.0</version>
  <description>Tesseract ROS Utilities</description>
  <maintainer email="levi.armstrong@swri.org">Levi Armstrong</maintainer>
  <license>Apache 2.0</license>
  <author>Levi Armstrong</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ros_industrial_cmake_boilerplate</build_depend>

  <depend>tesseract_collision</depend>
  <depend>tesseract_common</depend>
  <depend>tesseract_environment</depend>
  <depend>tesseract_geometry</depend>
  <depend>tesseract_motion_planners</depend>
  <depend>tesseract_msgs</depend>
  <depend>tesseract_scene_graph</depend>
  <depend>tesseract_visualization</depend>
  <depend>tesseract_command_language</depend>
  <depend>tesseract_process_managers</depend>
  <depend>tesseract_srdf</depend>
  <depend>yaml-cpp</depend>

  <build_depend>eigen</build_depend>
  <build_export_depend>eigen</build_export_depend>
  <depend>eigen_conversions</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>

  <test_depend>tesseract_support</test_depend>

  <export>
  </export>
</package>
